# newsletter-manager

./: .env.example  BUILD_PLAN.md  Dockerfile.backend  LICENSE  PROJECT_IMPLEMENTATION.md  README.md  WORKFLOW.md  docker-compose.yml
backend/: celery_app.py  pyproject.toml  requirements.txt
backend/app/: config.py  logger.py  main.py  tasks.py
backend/app/routers/: health.py  runs.py  topics.py
backend/app/schemas/: models.py
backend/app/services/: content_sources.py  image_service.py  llm_service.py  mailjet_service.py  supabase_service.py  template_renderer.py
backend/app/templates/: newsletter.mjml
backend/app/utils/: dedupe.py
backend/app/workflows/: pipeline.py
backend/tests/: test_dedupe.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/auth/: AuthGate.tsx
frontend/src/components/dashboard/: DraftPreview.tsx  ManualTrigger.tsx  RunHistory.tsx  ScheduleCard.tsx  StatusHeader.tsx  TopicsForm.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  skeleton.tsx  textarea.tsx
frontend/src/lib/: api.ts  supabase.ts  types.ts
