[project]
name = "newsletter-backend"
version = "0.1.0"
description = "FastAPI backend for the automated newsletter platform"
authors = [{ name = "Automation" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.25",
    "httpx>=0.27",
    "feedparser>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "supabase>=2.4",
    "mailjet-rest>=1.3",
    "jinja2>=3.1",
    "celery>=5.3",
    "redis>=5.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
